Ex1 fonctionne (partie optionnel par encore commencée)

--- a/TP3/Ex1/Makefile
+++ b/TP3/Ex1/Makefile
@@ -1,13 +1,13 @@
 all: tests.o fonctions.o
-	gcc -o Test -lm -Wall fonctions.o tests.o
+	gcc -o Test -Wall fonctions.o tests.o -lm
 	rm *.o
 	rm *.gch
 
 tests.o : tests.c
-	gcc -c -lm -Wall tests.c
+	gcc -c -Wall tests.c -lm
 
 fonctions.o : fonctions.c fonctions.h
-	gcc -c -Wall -lm fonctions.c fonctions.h
+	gcc -c -Wall fonctions.c fonctions.h -lm
 
 clean:
 	rm *.o
